Commit pra fazer um pull

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </span>
                 </div>
 
-                <div class="utilities">
+                <div class="search-bar">
 
                     <div class="navbar-bt bg-body-tertiary">
                         <div class="container-fluid">
@@ -112,6 +112,10 @@
                             <button class="btn btn-outline-success" type="submit">Search</button>
                           </form>
                         </div>
+                    </div>
+
+                    <div class="utility-icons">
+
                     </div>
 
                 </div>
