Consertando as margens

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <!-- Início da main -->
     <main>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci enim ratione voluptatibus. Optio ad facilis nostrum id laudantium commodi, laboriosam ipsum a, velit tempora quo sapiente, provident inventore voluptate nulla!
+        <div class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci enim ratione voluptatibus. Optio ad facilis nostrum id laudantium commodi, laboriosam ipsum a, velit tempora quo sapiente, provident inventore voluptate nulla!</div>
 
         <div class="testimonials-container">
             <div class="testimonials" id="testimonials">
