Criação da estrutura do carrossel de produtos da index

--- a/index.html
+++ b/index.html
@@ -269,31 +269,43 @@
         </div>
 
         <!-- Início do Carrossel de Produtos -->
-        <div class="caroussel-container">
+        <div class="propaganda-container">
 
             <h1 class="title">Nossos <span class="title-color">Produtos</span></h1>
 
-            <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
+            <div class="propaganda-content">
+
+                <div class="caroussel-container propaganda-item">
+                    <div id="carouselExample" class="carousel slide">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="src/elements/imgs/tigela-dentro-de-outra.png" class="caroussel-img" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="src/elements/imgs/tigela-dentro-de-outra.png" class="caroussel-img" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="src/elements/imgs/tigela-dentro-de-outra.png" class="caroussel-img" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
+
+                <div class="propaganda-info propaganda-item">
+                    <h2>Cozinha</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio corrupti, similique quis ab voluptatum consequuntur ad sed cum suscipit quo rem, earum ratione labore dolores perspiciatis a culpa obcaecati harum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores facere quidem vero nobis placeat, est tenetur alias eligendi iusto voluptas minus quia sunt unde aut illum quam! Voluptatibus, vitae quo.</p>
+                    <span>Tábuas | Tigelas | Pilões</span>
+                </div>
+
+            </div>
 
 
         </div>
@@ -330,8 +342,7 @@
     </main>
     <!-- Fim da Main -->
 
-    <!--Footer porra-->
-
+    <!--Início do Footer-->
     <footer class="footer-container">
         <div class="footer">
             <div class="footer-sections">
@@ -372,6 +383,7 @@
             </div>
         </div>
     </footer>
+    <!--Fim do Footer-->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
