--- a/index.html
+++ b/index.html
@@ -128,18 +128,22 @@
 
                     <div class="navbar-bt">
                         <div class="container-fluid search-container">
-                          <form class="d-flex" role="search">
-                            <div class="search-bar">
-                                <input class="search-input form-control" type="search" placeholder="Pesquisar" aria-label="Search">
-                            </div>
-                            <label for="" class="search-btn">
-                                <span>
-                                    <svg width="24" height="24" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M29.5111 32L18.3111 20.8C17.4222 21.5111 16.4 22.0741 15.2444 22.4889C14.0889 22.9037 12.8593 23.1111 11.5556 23.1111C8.32593 23.1111 5.59289 21.9923 3.35645 19.7547C1.12 17.517 0.00118613 14.784 9.40623e-07 11.5556C-0.00118424 8.32711 1.11763 5.59407 3.35645 3.35644C5.59526 1.11881 8.3283 0 11.5556 0C14.7828 0 17.5164 1.11881 19.7564 3.35644C21.9964 5.59407 23.1147 8.32711 23.1111 11.5556C23.1111 12.8593 22.9037 14.0889 22.4889 15.2444C22.0741 16.4 21.5111 17.4222 20.8 18.3111L32 29.5111L29.5111 32ZM11.5556 19.5556C13.7778 19.5556 15.667 18.7781 17.2231 17.2231C18.7793 15.6681 19.5567 13.779 19.5556 11.5556C19.5544 9.33215 18.7769 7.44356 17.2231 5.88978C15.6693 4.336 13.7801 3.55793 11.5556 3.55556C9.33096 3.55319 7.44237 4.33126 5.88978 5.88978C4.33719 7.4483 3.55911 9.33689 3.55556 11.5556C3.552 13.7742 4.33008 15.6634 5.88978 17.2231C7.44948 18.7828 9.33808 19.5603 11.5556 19.5556Z" fill="#211D1D"/>
-                                    </svg>
-                                </span>
-                            </label>
-                          </form>
+                            <form class="d-flex" role="search">
+                                <div class="search-bar">
+                                    <input class="search-input form-control" type="search" placeholder="Pesquisar"
+                                        aria-label="Search">
+                                </div>
+                                <label for="" class="search-btn">
+                                    <span>
+                                        <svg width="24" height="24" viewBox="0 0 30 30" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M29.5111 32L18.3111 20.8C17.4222 21.5111 16.4 22.0741 15.2444 22.4889C14.0889 22.9037 12.8593 23.1111 11.5556 23.1111C8.32593 23.1111 5.59289 21.9923 3.35645 19.7547C1.12 17.517 0.00118613 14.784 9.40623e-07 11.5556C-0.00118424 8.32711 1.11763 5.59407 3.35645 3.35644C5.59526 1.11881 8.3283 0 11.5556 0C14.7828 0 17.5164 1.11881 19.7564 3.35644C21.9964 5.59407 23.1147 8.32711 23.1111 11.5556C23.1111 12.8593 22.9037 14.0889 22.4889 15.2444C22.0741 16.4 21.5111 17.4222 20.8 18.3111L32 29.5111L29.5111 32ZM11.5556 19.5556C13.7778 19.5556 15.667 18.7781 17.2231 17.2231C18.7793 15.6681 19.5567 13.779 19.5556 11.5556C19.5544 9.33215 18.7769 7.44356 17.2231 5.88978C15.6693 4.336 13.7801 3.55793 11.5556 3.55556C9.33096 3.55319 7.44237 4.33126 5.88978 5.88978C4.33719 7.4483 3.55911 9.33689 3.55556 11.5556C3.552 13.7742 4.33008 15.6634 5.88978 17.2231C7.44948 18.7828 9.33808 19.5603 11.5556 19.5556Z"
+                                                fill="#211D1D" />
+                                        </svg>
+                                    </span>
+                                </label>
+                            </form>
                         </div>
                     </div>
 
@@ -278,30 +282,36 @@
                 <div class="caroussel-container propaganda-item">
                     <div id="carouselExample" class="carousel slide">
                         <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img src="src/elements/imgs/tigela-dentro-de-outra.png" class="caroussel-img" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="src/elements/imgs/tigela-dentro-de-outra.png" class="caroussel-img" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="src/elements/imgs/tigela-dentro-de-outra.png" class="caroussel-img" alt="...">
-                          </div>
+                            <div class="carousel-item active">
+                                <img src="src/elements/imgs/tigela-dentro-de-outra.png" class="caroussel-img" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="src/elements/imgs/tigela-dentro-de-outra.png" class="caroussel-img" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="src/elements/imgs/tigela-dentro-de-outra.png" class="caroussel-img" alt="...">
+                            </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
                         </button>
-                      </div>
+                    </div>
                 </div>
 
                 <div class="propaganda-info propaganda-item">
                     <h2>Cozinha</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio corrupti, similique quis ab voluptatum consequuntur ad sed cum suscipit quo rem, earum ratione labore dolores perspiciatis a culpa obcaecati harum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores facere quidem vero nobis placeat, est tenetur alias eligendi iusto voluptas minus quia sunt unde aut illum quam! Voluptatibus, vitae quo.</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio corrupti, similique quis ab
+                        voluptatum consequuntur ad sed cum suscipit quo rem, earum ratione labore dolores perspiciatis a
+                        culpa obcaecati harum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores
+                        facere quidem vero nobis placeat, est tenetur alias eligendi iusto voluptas minus quia sunt unde
+                        aut illum quam! Voluptatibus, vitae quo.</p>
                     <span>Tábuas | Tigelas | Pilões</span>
                 </div>
 
@@ -310,13 +320,13 @@
 
         </div>
         <!-- Fim do Carrossel de Produtos -->
-        
+
         <!-- Início dos Comentários -->
         <div class="testimonials-container">
             <div class="testimonials" id="testimonials">
                 <div class="testimonials-header" id="testimonials-header">
                     <h1>Avaliações</h1>
-                    <h2 class="title">O que os <span class="title-color">Clientes Dizem</span></h2>
+                    <h2>O que os <span class="title-color">Clientes Dizem</span></h2>
                     <p>
                         Quer saber o que torna a nossa marca tão especial?
                         Confira o que nossos clientes têm a dizer!
@@ -343,7 +353,7 @@
     <!-- Fim da Main -->
 
     <!--Início do Footer-->
-    <footer class="footer-container">
+    <!--<footer class="footer-container">
         <div class="footer">
             <div class="footer-sections">
                 <div class="footer-section footer-brand">
@@ -382,8 +392,48 @@
                 <p>&copy; 2025 Todos os direitos reservados. Site criado por xxxxxxxxxxx.</p>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!--Fim do Footer-->
+
+    <footer class="footer-container">
+        <div class="footer">
+            <div class="footer-section">
+                <h1>Dom Chico</h1>
+                <p>Design em madeira</p>
+            </div>
+
+            <div class="footer-section">
+                <h2>Institucional</h2>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Como comprar</a></li>
+                    <li><a href="#">Envio</a></li>
+                    <li><a href="#">Segurança</a></li>
+                    <li><a href="#">Privacidade</a></li>
+                    <li><a href="#">Pagamento</a></li>
+                    <li><a href="#">Fale conosco</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h2>Contato</h2>
+                <ul>
+                    <li><a href="#"><i class="fa fa-whatsapp"></i> 123456789</a></li>
+                    <li><a href="#"><i class="fa fa-instagram"></i> @domchico</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h2>Pagamento</h2>
+                <img src="src/elements/imgs/bandeiras.png" alt="Bandeiras aceitas"/>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <hr/>
+            <p>&copy; 2025 Todos os direitos reservados. Criado por <a href="#" target="_blank" rel="noopener noreferrer">Romulus</a></p>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
@@ -391,5 +441,4 @@
     <script src="src/js/universal.js" defer></script>
     <script src="src/js/index.js"></script>
 </body>
-
 </html>
