desenvolvendo segunda seção da página sobre

--- a/sobre.html
+++ b/sobre.html
@@ -198,15 +198,31 @@
     <main>
 
         <div class="brand-container"> <!--TENHO QUE TERMINAR AQUI AINDA-->
-            <section class="sobre-secao">
-                <img src="src/elements/imgs/logo-recortada.png" class="img-fluid" alt="Logo da empresa"> 
-                <div class="sobre-texto">
+            <div class="brand-section">
+                <div class="brand-logo">
+                    <img src="src/elements/imgs/logo-recortada.png" class="img-fluid" alt="Logo da empresa"> 
+                </div>
+                <div class="brand-text">
                     <h1>Bem Vindo a Dom Chico</h1>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat qui ducimus iste sequi quasi ullam eligendi vel, maxime quidem, error sed explicabo nemo, at exercitationem similique ipsum voluptas illum ad?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit ipsa, eveniet saepe quo iste itaque voluptatum beatae vel hic. Dolorem enim ad atque vero aspernatur excepturi velit ipsam dicta dolore?
                     </p>
                 </div>
-            </section>
+            </div>
+        </div>
+
+        <div class="profile-container"> <!--TENHO QUE TERMINAR AQUI AINDA-->
+            <div class="profile-section"> 
+                <div class="profile-text">
+                    <h1>Francisco, O Artesão</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident quae accusamus accusantium natus neque eum possimus dicta reprehenderit eligendi, architecto error sed explicabo nam consectetur beatae qui aspernatur repellat earum? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam dicta reprehenderit magni eveniet ab voluptatum iure officiis ducimus labore repellat suscipit hic molestiae sit possimus, adipisci sint aspernatur libero quibusdam!
+                    </p>
+                </div>
+                <div class="profile-image">
+                    <img src="src/elements/imgs/dom-chico-falso.jpg" class="img-fluid" alt="Imagem do Artesão">
+                </div>
+            </div>
         </div>
 
     </main>
