desenvolvendo quarta e quinta seção da página sobre

--- a/sobre.html
+++ b/sobre.html
@@ -197,26 +197,34 @@
 
     <main>
 
-        <div class="brand-container"> <!--TENHO QUE TERMINAR AQUI AINDA-->
+        <div class="brand-container"> <!--ajustar a responsividade disso aqui-->
             <div class="brand-section">
                 <div class="brand-logo">
-                    <img src="src/elements/imgs/logo-recortada.png" class="img-fluid" alt="Logo da empresa"> 
+                    <img src="src/elements/imgs/logo-recortada.png" class="img-fluid" alt="Logo da empresa">
                 </div>
                 <div class="brand-text">
                     <h1>Bem Vindo a Dom Chico</h1>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat qui ducimus iste sequi quasi ullam eligendi vel, maxime quidem, error sed explicabo nemo, at exercitationem similique ipsum voluptas illum ad?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit ipsa, eveniet saepe quo iste itaque voluptatum beatae vel hic. Dolorem enim ad atque vero aspernatur excepturi velit ipsam dicta dolore?
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat qui ducimus iste sequi quasi
+                        ullam eligendi vel, maxime quidem, error sed explicabo nemo, at exercitationem similique ipsum
+                        voluptas illum ad?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit ipsa, eveniet
+                        saepe quo iste itaque voluptatum beatae vel hic. Dolorem enim ad atque vero aspernatur excepturi
+                        velit ipsam dicta dolore?
                     </p>
                 </div>
             </div>
         </div>
 
-        <div class="profile-container"> <!--TENHO QUE TERMINAR AQUI AINDA-->
-            <div class="profile-section"> 
+        <div class="profile-container"> <!--ajustar a responsividade disso aqui-->
+            <div class="profile-section">
                 <div class="profile-text">
-                    <h1>Francisco, O Artesão</h1>
+                    <h1>Donizetti, O Artesão</h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident quae accusamus accusantium natus neque eum possimus dicta reprehenderit eligendi, architecto error sed explicabo nam consectetur beatae qui aspernatur repellat earum? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam dicta reprehenderit magni eveniet ab voluptatum iure officiis ducimus labore repellat suscipit hic molestiae sit possimus, adipisci sint aspernatur libero quibusdam!
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident quae accusamus accusantium
+                        natus neque eum possimus dicta reprehenderit eligendi, architecto error sed explicabo nam
+                        consectetur beatae qui aspernatur repellat earum? Lorem ipsum, dolor sit amet consectetur
+                        adipisicing elit. Quam dicta reprehenderit magni eveniet ab voluptatum iure officiis ducimus
+                        labore repellat suscipit hic molestiae sit possimus, adipisci sint aspernatur libero quibusdam!
                     </p>
                 </div>
                 <div class="profile-image">
@@ -224,6 +232,35 @@
                 </div>
             </div>
         </div>
+
+        <div class="production-container">
+            <div class="production-content">
+                <h2>Produção</h2>
+                <p>
+                    Dom Chico não esculpe, ele conjura. Sob a luz das estrelas, sua oficina se transforma em um santuário místico. A madeira, antes inerte, começa a murmurar segredos esquecidos. Com um movimento quase ritualístico, ele toca o material, e a própria essência da floresta se manifesta. Dom Chico não cria arte—ele canaliza a alma da natureza. 
+                </p>
+            </div>
+        </div>
+
+        <div class="about-container">
+            <div class="about-section">
+                <h2>Donizetti, O Artesão</h2>
+                <p>
+                    Dom Chico é um lendário artesão, cujas mãos parecem ter sido esculpidas pelos próprios deuses da
+                    floresta. Nascido em uma remota vila cercada por árvores ancestrais, ele descobriu desde cedo seu
+                    dom único: ouvir as histórias sussurradas pelas madeiras antigas.
+                    Conta-se que, ainda jovem, Dom Chico aprendeu os segredos do artesanato ao ser guiado por espíritos
+                    da floresta em noites de lua cheia. Com cada golpe de cinzel, ele não apenas molda a madeira, mas
+                    liberta a alma da árvore, transformando-a em peças que carregam a magia e a mística dos tempos
+                    passados.
+                    Hoje, suas criações são reverenciadas como verdadeiras relíquias. Cada móvel, cada detalhe, ressoa
+                    com a energia das florestas ancestrais, tornando-se um elo entre o natural e o humano. Dom Chico não
+                    apenas cria; ele canaliza a essência da natureza em cada obra, entregando ao mundo mais do que
+                    arte—entregando uma lenda viva.
+                </p>
+            </div>
+        </div>
+
 
     </main>
 
