Finalização do carrinho, criação da estrutura da seção sobre madeiras na página inicial e também da seção de "mais vendidos"

--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre - Dom Chico</title>
+    <title>Sobre</title>
 
     <link rel="stylesheet" href="src/scss/main.css">
     <link rel="stylesheet" href="src/css/sobre.css" type="text/css">
@@ -180,6 +180,10 @@
                             <h1>Carrinho de Compras</h1>
                             <div class="listCart">
                                 
+                                
+                            </div>
+                            <div class="finalPrice">
+                                Preço total: <span>0</span>
                             </div>
                             <div class="btn">
                                 <button class="close">FECHAR</button>
