--- a/estrutura.html
+++ b/estrutura.html
@@ -183,10 +183,14 @@
                             <h1>Carrinho de Compras</h1>
                             <div class="listCart">
                                 
+                                
+                            </div>
+                            <div class="finalPrice">
+                                Preço total: <span>0</span>
                             </div>
                             <div class="btn">
                                 <button class="close">FECHAR</button>
-                                <button class="checkOut">Ver Pedido</button>
+                                <button class="checkOut">Pagamento</button>
                             </div>
                         </div>
 
