Criação da estrutura da página de pagamento e outras coisas

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <div class="utility-icons">
 
                         <div class="icon-container">
-                            <a href="#" class="icon-link">
+                            <a href="login.html" class="icon-link">
                                 <svg width="30" height="30" viewBox="0 0 32 32" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -561,7 +561,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
     <script src="src/js/bootstrap.bundle.min.js"></script>
     <script src="src/js/universal.js" defer></script>
     <script src="src/js/index.js"></script>
