--- a/sobre.html
+++ b/sobre.html
@@ -146,7 +146,7 @@
                     <div class="utility-icons">
 
                         <div class="icon-container">
-                            <a href="#" class="icon-link">
+                            <a href="login.html" class="icon-link">
                                 <svg width="30" height="30" viewBox="0 0 32 32" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
